# jacco-lang

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  add-test  design.md  jacco  notes.md  run-example  run-test  setup  test
docs/: README.md
docs/notes/: 050-types.md  055-type-check.md  README.md  abbreviations.md  closure.md  cps-conversion.md  exceptions.md  generics.md  motivation.md  policy.md  syntax-parse.md  syntax-tokens.md  syntax.ungram  syntax_parse.md  type-check.md
docs/spec/: 050-types.md  055-type-check.md  syntax-jaxxo.ungram
examples/c_compiler/: .gitignore  Makefile  README.md  c_compiler.c  c_compiler.jacco  test
examples/calc/: .gitignore  Cargo.toml  build.rs  calc.jacco  run
examples/calc/src/: main.rs
jacco_cli/: Cargo.toml
jacco_lib/: Cargo.toml
jacco_lib/src/: lib.rs
jl_clang/: Cargo.toml
jl_clang/src/: c_expr.rs  c_unary_op.rs  clang_gen.rs  lib.rs
jl_cli/: Cargo.toml
jl_cli/src/: cmd_batch.rs  cmd_batch_help.txt  cmd_build.rs  cmd_build_help.txt  cmd_dump_syntax.rs  cmd_dump_syntax_help.txt  cmd_help.rs  cmd_help.txt  cmd_version.rs  main.rs
jl_cli/src/util/: dyn_error.rs  package_info.rs
jl_compiler/: Cargo.toml
jl_compiler/src/: clang.rs  cli.rs  cps.rs  front.rs  lib.rs  logs.rs  parse.rs  source.rs  tests.rs  token.rs
jl_compiler/src/clang/: c_binary_op.rs  c_block.rs  c_expr.rs  c_root.rs  c_stmt.rs  c_ty.rs  c_unary_op.rs  clang_dump.rs  clang_gen.rs  clang_node.rs
jl_compiler/src/cps/: cps_fold.rs  cps_gen.rs  cps_node.rs  cps_outline.rs  cps_prim.rs  cps_term.rs  eliminate_unit.rs  eval.rs  flow.rs  k_alias.rs  k_command.rs  k_const.rs  k_const_enum.rs  k_enum.rs  k_extern_fn.rs  k_field.rs  k_fn.rs  k_label.rs  k_local.rs  k_local_var.rs  k_meta_ty.rs  k_mod.rs  k_mut.rs  k_node.rs  k_number.rs  k_number_ty.rs  k_outlines.rs  k_prim.rs  k_project.rs  k_root.rs  k_static_var.rs  k_struct.rs  k_struct_enum.rs  k_symbol.rs  k_term.rs  k_term_var.rs  k_ty.rs  k_ty_env.rs  k_value.rs  k_vis.rs  (+4 more)
jl_compiler/src/front/: cps_conversion.rs  cps_gen.rs  cps_gen_decl.rs  cps_gen_expr.rs  cps_gen_lit.rs  cps_gen_pat.rs  cps_gen_stmt.rs  cps_gen_ty.rs  cps_generator.rs  env.rs  mod_outline_gen.rs  name_resolution.rs  occurrence_collection.rs  semantic_analyzer.rs  syntax_validation.rs  ty_inferrer.rs
jl_compiler/src/lang_service/: doc_analysis.rs  lang_service.rs
jl_compiler/src/lang_service/actions/: completion.rs  definitions.rs  document_highlight.rs  hover.rs  references.rs  rename.rs  validate.rs
jl_compiler/src/parse/: ast.rs  ast_gen.rs  binary_op.rs  event.rs  p_binary_op.rs  p_element.rs  p_loc.rs  p_node.rs  p_token.rs  p_tree.rs  p_tree_builder.rs  p_unary_op.rs  p_vis.rs  parse_context.rs  parse_decl.rs  parse_expr.rs  parse_pat.rs  parse_stmt.rs  parse_term.rs  parse_tree.rs  parse_ty.rs  syntax_error.rs  unary_op.rs
jl_compiler/src/parse/parse_tree/: parse_element.rs  parse_node.rs
jl_compiler/src/scope/: lexical_referent.rs  scope_system.rs  scope_walker.rs  syntax_scopes.rs
jl_compiler/src/source/: cursor_text.rs  doc.rs  loc.rs  pos.rs  position.rs  range.rs  source_file.rs  t_pos.rs  t_pos16.rs  t_range.rs
jl_compiler/src/token/: keyword.rs  lit_binary.rs  lit_decimal.rs  lit_hex.rs  location.rs  operator.rs  punctuation.rs  token_data.rs  token_kind.rs  token_source.rs  tokenize_context.rs  tokenize_rules.rs
jl_compiler/src/utils/: debug_with.rs  id_provider.rs  map_stack.rs  raw_id.rs  take_out.rs  vec_arena.rs
jl_cps_actions/: Cargo.toml
jl_cps_actions/src/: lib.rs
jl_cps_repr/: Cargo.toml
jl_cps_repr/src/: cps_fold.rs  k_command.rs  k_const.rs  k_extern_fn.rs  k_field.rs  k_fn.rs  k_label.rs  k_local.rs  k_meta_ty.rs  k_node.rs  k_outlines.rs  k_prim.rs  k_root.rs  k_static_var.rs  k_struct.rs  k_symbol.rs  k_term.rs  k_ty.rs  k_ty_env.rs  lib.rs
jl_lsp/: Cargo.toml
jl_lsp/src/: docs.rs  lsp_server.rs  main.rs  sources.rs
jl_lsp/src/lsp_server/: lsp_handler.rs  lsp_main.rs  lsp_receiver.rs  lsp_sender.rs
jl_lsp/src/utils/: json.rs  uri.rs  watcher.rs
jl_syntax/: Cargo.toml
jl_tests/: Cargo.toml
jl_tests/src/: main.rs
jl_vscode_ext/: .gitignore  README.md  install  language-configuration.json  package-lock.json  package.json  tsconfig.json  uninstall
libjacco_syntax/: Makefile  build  libjacco_syntax.c  libjacco_syntax.jacco
libtest/: test.c
tests/add/: add.jacco  (+1 more)
(+182 files in other folders)
