[package]
name = "libjacco"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jl_clang = { path = "../jl_clang" }
jl_cps_actions = { path = "../jl_cps_actions" }
jl_cps_repr = { path = "../jl_cps_repr" }
jl_syntax = { path = "../jl_syntax" }
