[package]
name = "jacco"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jl_compiler = { path = "../jl_compiler" }

# 環境変数に基づいてログ出力を行うロガーの実装。
# <https://github.com/sebasmagri/env_logger>
env_logger = { version = "0.7", default-features = false, features = ["termcolor", "atty", "humantime"] }

# ログ出力 API の基本になるもの。
# <https://github.com/rust-lang/log>
log = "0.4"

# データ構造を JSON 文字列と相互変換するためのライブラリ。(serde の軽量版)
# <https://github.com/dtolnay/miniserde>
miniserde = "0.1"

# 並列処理のためのライブラリ。
# <https://github.com/rayon-rs/rayon>
rayon = "1"
