[package]
name = "jl_compiler"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ログ出力 API の基本になるもの。
# <https://github.com/rust-lang/log>
log = "0.4"

# 安全にグローバル変数を扱うためのもの。
# <https://github.com/matklad/once_cell>
once_cell = "1"

# テキスト上の位置を表現するもの。(リリースされていない。)
# <https://github.com/vain0x/text-position-rs>
text-position-rs = { version = "0.2.0", git = "https://github.com/vain0x/text-position-rs", rev = "bf5fc2f5292b3592553d690417827b8adca834b1" }
