[package]
name = "jl_cps_actions"
version = "0.1.0"
authors = ["vain0x <vainzerox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jl_cps_repr = { path = "../jl_cps_repr" }

# ログ出力 API の基本になるもの。
# <https://github.com/rust-lang/log>
log = "0.4"
